# SyComplex

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
syComplex/: syComplex.hpp
syDTypes/: complex.hpp  constants.hpp  functions.hpp
tests/: CMakeLists.txt  tests.cpp
